overflow issue fix attempt #3 .......

--- a/styles/sass/partials/_base-styles.scss
+++ b/styles/sass/partials/_base-styles.scss
@@ -50,7 +50,7 @@ input, textarea {
   color: $primary;
   font-size: 2rem;
   line-height: 2rem;
-  margin: 20px;
+  margin: 20px 0;
   padding: 10px;
 
   &:hover,
