--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -286,11 +286,11 @@
     flex-direction: column;
 
     li {
-      width: 100%;
+      // width: 100%;
 
-      input, textarea {
-        width: 100%;
-      }
+      // input, textarea {
+      //   width: 100%;
+      // }
     }
   }
 }
